# docworker

./: .dockerignore  .env  .env.example  .env.railway.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .trivyignore  CLAUDE.md  CLEANUP_SUMMARY.md  CONTRIBUTING.md  Dockerfile.railway  Dockerfile.railway.fast  Dockerfile.railway.light  Dockerfile.railway.minimal  Dockerfile.railway.optimized  Dockerfile.railway.ultrafast  FLOWER_SETUP.md  Makefile  OCR_PIPELINE_FIX.md  PACKAGE_UPDATE_PLAN.md  PROMPT_OPTIMIZATION_SUMMARY.md  RAILWAY_DEPLOYMENT.md  RAILWAY_VARIABLES.md  README.md  README_RAILWAY.md  SPRACHÜBERSETZUNG_README.md  TESSERACT_REMOVAL_COMPLETE.md  UNIFIED_SYSTEM_MIGRATION.md  UPDATE_LOG.md  check.sh  check_pipeline_config.py  check_railway_db.py  check_remote_db.py  deploy-railway.sh  deploy.sh  docker-compose.traefik.yml  docker-compose.yml  pyproject.toml  railway.json  (+6 more)
backend/: .env.example  Dockerfile  MIGRATION_SUMMARY.md  PRIVACY_FILTER_README.md  bandit-report.json  check_schema.py  check_step_timestamps.py  create_unified_system.py  debug_upload.py  diagnose_steps_simple.py  document_prompts_backup.json  entrypoint.sh  fix_imports.py  migrate_data.py  migrate_to_unified_system.py  migrate_to_universal.py  obsolete_tables_backup.json  prod_config_backup_20251012_140345.json  pyproject.toml  railway.toml  requirements-dev.txt  requirements-minimal.txt  requirements.txt  run_migrations.py  seed_database.py  start-dev.sh  test_encryption_demo.py  test_env.py  test_ocr.py  test_privacy_filter.py  verify_enhanced_ocr.py
backend/app/: __init__.py  main.py
backend/app/core/: __init__.py  circuit_breaker.py  config.py  dependencies.py  encryption.py  error_middleware.py  exceptions.py  feature_flags.py  permissions.py  retry_policy.py  security.py
backend/app/database/: __init__.py  auth_models.py  chat_feedback_models.py  chat_models.py  connection.py  feature_flags_models.py  init_db.py  init_dynamic_pipeline.py  migrate_add_branching_fields.py  migrate_add_file_storage.py  migrate_branching_simple.py  migration_add_new_prompts.py  models.py  modular_pipeline_models.py  modular_pipeline_seed.py  optimized_models.py  seed_data.py  seed_document_classes.py  simple_seed.py  unified_models.py  unified_seed.py  updated_seed.py
backend/app/models/: document.py  document_types.py  ocr_result.py
backend/app/repositories/: __init__.py  ai_log_interaction_repository.py  api_key_repository.py  audit_log_repository.py  available_model_repository.py  base.py  base_repository.py  chat_log_repository.py  document_class_repository.py  feature_flags_repository.py  feedback_repository.py  ocr_configuration_repository.py  pipeline_job_repository.py  pipeline_step_execution_repository.py  pipeline_step_repository.py  refresh_token_repository.py  settings_repository.py  system_settings_repository.py  user_repository.py
backend/app/routers/: api_keys.py  audit.py  auth.py  chat.py  chat_feedback.py  chat_statistics.py  cost_statistics.py  feedback.py  health.py  modular_pipeline.py  monitoring.py  privacy_metrics.py  process.py  process_multi_file.py  process_unified.py  settings.py  settings_auth.py  settings_unified.py  upload.py  users.py
backend/app/services/: advanced_ocr_processor.py  ai_cost_tracker.py  ai_logging_service.py  audit_logger.py  auth_service.py  cache_service.py  cached_repositories.py  celery_client.py  chat_log_service.py  chat_rate_limiter.py  cleanup.py  clear_cache.py  database_prompt_manager.py  database_service.py  dify_rag_client.py  document_class_manager.py  document_classifier.py  feature_flags.py  feedback_analysis_service.py  feedback_service.py  file_quality_detector.py  file_sequence_detector.py  file_validator.py  global_prompts_manager.py  hybrid_text_extractor.py  improved_table_processor.py  markdown_table_formatter.py  medical_content_validator.py  mistral_client.py  modular_pipeline_executor.py  ocr_engine_manager.py  ollama_client.py  optimized_pipeline.py  optimized_pipeline_v2.py  optimized_privacy_filter.py  ovh_client.py  pii_service_client.py  pipeline_progress_tracker.py  privacy_filter.py  privacy_filter_advanced.py  (+13 more)
backend/docs/: ARCHITECTURE.md  ENCRYPTION.md  ERROR_HANDLING.md  PRIVACY_FILTER.md
backend/docs/ADRs/: 001-repository-pattern.md  002-service-layer-pattern.md  README.md
backend/migrations/: add_account_lockout_fields.py  add_encryption_search_fields.py  decrypt_dev_database.py  decrypt_dev_standalone.py  encrypt_existing_document_content.py  encrypt_existing_user_data.py  upgrade_encryption_to_aes256gcm.py
backend/migrations/versions/: change_result_data_to_text.py
backend/scripts/: README.md  analyze_pii_service.py  benchmark_privacy_filter.py  change_password.py  check_production_steps.py  check_redis_keys.py  check_schema.py  check_step_timestamps.py  cleanup_redis_manual.py  create_admin_user.py  create_admin_user_proper.py  create_admin_user_standalone.py  debug_beat_service.py  diagnose_steps_simple.py  generate_secrets.py  inspect_db_differences.py  inspect_redis.py  list_tables.py  manage_api_keys.py  run_auth_migration_simple.py  run_auth_migration_sql.sh  run_migration.py  run_migration_curl.py  run_migration_direct.py  run_migrations.py  show_table_schema.py  summary_report.md  test_gdpr_content_clearing.py  trigger_cleanup_manual.py  update_pii_protected_terms.py  verify_migration.py
backend/tests/: _deprecated_test_optimized_privacy_filter.py  conftest.py  debug_ollama.py  debug_upload.py  test_advanced_filter.py  test_api_privacy.py  test_cache_service.py  test_document_classifier.py  test_enhanced_ocr_system.py  test_error_handling.py  test_feature_flags.py  test_file_quality_detector.py  test_file_validator.py  test_hybrid_text_extractor.py  test_integration.py  test_language_translation.py  test_modular_pipeline_executor.py  test_ocr.py  test_order_behavior.py  test_ovh_client.py  test_ovh_integration.py  test_phase_aware_ordering.py  test_phase_ordering.py  test_privacy_filter_advanced.py  test_privacy_metrics.py  test_routers.py
backend/tests/fixtures/: test-document.txt
(+400 files in other folders)
