# ==========================================
# DocTranslator Project Configuration
# ==========================================
#
# Python linting, formatting, and type checking configuration
# for the DocTranslator backend.
#

[project]
name = "doctranslator"
version = "1.0.0"
description = "GDPR-compliant medical document translation service"
requires-python = ">=3.11"

# ==========================================
# Ruff Configuration
# ==========================================
# Ruff is an extremely fast Python linter and formatter
# https://docs.astral.sh/ruff/

[tool.ruff]
# Line length
line-length = 100

# Python version
target-version = "py311"

# Exclude directories
exclude = [
    ".git",
    ".venv",
    "venv",
    "__pycache__",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache",
    "build",
    "dist",
    "*.egg-info",
    "migrations",  # Don't lint migrations
    "_deprecated",  # Don't lint deprecated code
]

# ==========================================
# Ruff Linting Rules
# ==========================================

[tool.ruff.lint]
# Enable specific rule sets
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort (import sorting)
    "N",      # pep8-naming
    "UP",     # pyupgrade (modernize Python code)
    "B",      # flake8-bugbear (find likely bugs)
    "A",      # flake8-builtins (check for builtin shadowing)
    "C4",     # flake8-comprehensions (better list/dict comprehensions)
    "T20",    # flake8-print (find print statements)
    "SIM",    # flake8-simplify (simplify code)
    "RET",    # flake8-return (improve return statements)
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib (prefer pathlib over os.path)
]

# Ignore specific rules
ignore = [
    "E501",    # Line too long (handled by formatter)
    "B008",    # Do not perform function call in argument defaults (FastAPI Depends)
    "T201",    # Print found (we use print in some places intentionally)
    "ARG001",  # Unused function argument (common in FastAPI dependency injection)
    "ARG002",  # Unused method argument (common in overrides)
    "PTH123",  # Use Path.open() instead of open() (not always better)
    "SIM102",  # Use single if statement (sometimes nested is clearer)
    "UP017",   # Prefer datetime.UTC over timezone.utc (we use timezone.utc for compatibility)
    "N812",    # Lowercase imported as non-lowercase (pypdf as PyPDF2 for backward compatibility)
]

# Allow fix for all enabled rules (when using --fix)
fixable = ["ALL"]
unfixable = []

# ==========================================
# Ruff Import Sorting (isort replacement)
# ==========================================

[tool.ruff.lint.isort]
known-first-party = ["app", "shared"]
force-sort-within-sections = true
split-on-trailing-comma = false

# ==========================================
# Ruff Formatting (black replacement)
# ==========================================

[tool.ruff.format]
# Use double quotes for strings
quote-style = "double"

# Indent with spaces
indent-style = "space"

# Respect magic trailing comma
skip-magic-trailing-comma = false

# Auto-detect line ending
line-ending = "auto"

# ==========================================
# MyPy Configuration
# ==========================================
# MyPy is a static type checker for Python
# https://mypy.readthedocs.io/

[tool.mypy]
# Python version
python_version = "3.11"

# Exclude directories
exclude = [
    "migrations/",
    "_deprecated/",
    "tests/",  # Don't type check tests initially
    ".venv/",
    "venv/",
]

# ==========================================
# Type Checking Strictness
# ==========================================
# Start with moderate strictness, increase over time

# Disallow dynamic typing
disallow_any_explicit = false
disallow_any_generics = false
disallow_subclassing_any = false

# Disallow untyped definitions
disallow_untyped_calls = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_decorators = false

# Check optional handling
strict_optional = true
no_implicit_optional = true

# Warnings
warn_redundant_casts = true
warn_unused_ignores = true
warn_unused_configs = true
warn_return_any = false
warn_unreachable = true

# Error reporting
show_error_context = true
show_column_numbers = true
show_error_codes = true
pretty = true

# Misc
check_untyped_defs = true
implicit_reexport = true
strict_equality = true

# ==========================================
# MyPy Per-Module Configuration
# ==========================================

# Be more strict with new code
[[tool.mypy.overrides]]
module = "app.routers.admin.*"
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = "app.core.*"
disallow_untyped_defs = true
warn_return_any = true

# Ignore missing imports for third-party libraries
[[tool.mypy.overrides]]
module = [
    "celery.*",
    "slowapi.*",
    "pdf2image.*",
    "pdfplumber.*",
]
ignore_missing_imports = true

# ==========================================
# Pytest Configuration
# ==========================================

[tool.pytest.ini_options]
# Minimum Python version
minversion = "8.0"

# Test discovery patterns
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

# Python path - include project root for shared module imports
pythonpath = ["..", "."]

# Output options
addopts = [
    "-v",                    # Verbose output
    "--strict-markers",      # Strict marker checking
    "--tb=short",           # Shorter traceback format
    "--cov=app",            # Coverage for app directory
    "--cov-report=term-missing",  # Show missing lines
    "--cov-report=html",    # HTML coverage report
    "--asyncio-mode=auto",  # Auto-detect async tests
]

# Asyncio mode
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

# Markers for organizing tests
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
    "api: marks tests as API tests",
    "e2e: marks tests as end-to-end tests",
]

# ==========================================
# Coverage Configuration
# ==========================================

[tool.coverage.run]
source = ["app"]
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/_deprecated/*",
    "*/database/init_db.py",  # Database initialization
    "*/database/*_seed.py",   # Seed scripts
]

[tool.coverage.report]
# Fail if coverage is below this percentage
fail_under = 15

# Show lines that are missing coverage
show_missing = true

# Skip covered files with 100% coverage
skip_covered = false

# Sort by coverage percentage
sort = "Cover"

exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise AssertionError",
    "raise NotImplementedError",
    "@abstractmethod",
]

# ==========================================
# Bandit Configuration (Security Linter)
# ==========================================

[tool.bandit]
exclude_dirs = ["tests", "migrations", "_deprecated"]
skips = [
    "B101",  # assert_used (tests only)
]
# Only report medium and high severity issues
min_severity = "medium"
min_confidence = "medium"

# ==========================================
# Build System
# ==========================================

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
